tests/integration/errors/test_modifier_static_toplevel.sn
# Test: Compile error - 'static fn' at top-level (static at module level is only for var)

static fn helper(): int =>
    return 42

fn main(): void =>
    var x: int = helper()
    print($"{x}\n")
